--- a/index2.html
+++ b/index2.html
@@ -8,29 +8,39 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <a class="navbar-brand" href="#">Joga +</a>
-        <ul class="navbar-nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="Jogos.html">Jogos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="Cadastro.html">Novo Jogo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="login.html">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Alternar menu</a>
-            </li>
-        </ul>
+    <!-- Botão para abrir o menu lateral -->
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu">
+        <span class=""></span>Menu
+    </button>
+
+    <!-- Menu Lateral (offcanvas) -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasMenuLabel">Joga +</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Fechar"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="Jogos.html">Jogos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="Cadastro.html">Novo Jogo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="login.html">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Alternar menu</a>
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <!-- Main Content Area (ensuring it's not overlapped by the sidebar) -->
+    <!-- Conteúdo Principal -->
     <div class="content">
         <!-- Carrossel de Destaque -->
         <section id="games" class="games">
@@ -44,7 +54,6 @@
                             <div class="carousel-background" style="background-image: url('Imagens/Alucard\ banner.png');">
                                 <div class="carousel-caption text-center">
                                     <h3>Castlevania: Symphony of the Night</h3>
-                                    <p>Explore o castelo e enfrente desafios em uma jornada épica.</p>
                                 </div>
                             </div>
                         </a>
@@ -53,7 +62,6 @@
                         <div class="carousel-background" style="background-image: url('Imagens/GOW\ banner.jpg');">
                             <div class="carousel-caption text-center">
                                 <h3>God of War</h3>
-                                <p>Acompanhe Kratos em sua jornada de redenção e batalhas épicas.</p>
                             </div>
                         </div>
                     </div>
@@ -61,7 +69,6 @@
                         <div class="carousel-background" style="background-image: url('Imagens/Geralt-banner.jpg');">
                             <div class="carousel-caption text-center">
                                 <h3>The Witcher 3: Wild Hunt</h3>
-                                <p>Participe de uma jornada épica com Geralt de Rivia em busca de Ciri.</p>
                             </div>
                         </div>
                     </div>
@@ -112,16 +119,16 @@
         }
 
         .carousel-caption {
-            position: sticky;
+            position: relative;
             z-index: 2;
-            padding: 0px;
+            padding: 18px;
             color: white;
             background: rgba(0, 0, 0, 0.5);
             bottom: 20px;
             left: 50%;
+            margin-top: 10px;
             transform: translateX(-50%);
             text-align: center;
-            margin-left: 300px;
         }
 
         .carousel-caption h3 {
@@ -133,47 +140,33 @@
             font-size: 1.2rem;
         }
 
-        /* Sidebar */
-        .sidebar {
-            height: 100vh;
-            width: 250px;
-            position: fixed;
-            top: 0;
-            left: 0;
-            background-color: #f8f9fa;
-            padding-top: 20px;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-            transition: width 0.3s ease; /* Transição suave */
+        /* Menu Lateral (offcanvas) */
+        .offcanvas-body {
+            padding: 0;
         }
 
-        .sidebar .nav-item {
-            margin: 10px 0;
+        .offcanvas .navbar-nav {
+            list-style-type: none;
+            padding-left: 0;
         }
 
-        .sidebar .nav-link {
-            font-weight: 500;
-            color: #333;
+        .offcanvas .nav-item {
+            margin: 15px 0;
         }
 
-        .sidebar .nav-link:hover {
-            background-color: #ddd;
+        .offcanvas .nav-link {
+            font-size: 1.2rem;
         }
 
         /* Conteúdo */
         .content {
-            margin-left: 250px;
             padding: 20px;
-            transition: margin-left 0.3s ease;
         }
 
         /* Responsividade */
-        @media (max-width: 992px) {
-            .sidebar {
-                width: 200px;
-            }
-
+        @media (max-width: 768px) {
             .carousel-item {
-                height: 300px;
+                height: 250px;
             }
 
             .carousel-caption h3 {
@@ -185,54 +178,10 @@
             }
 
             .content {
-                margin-left: 200px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 100%;
-                height: auto;
-                position: absolute;
-                box-shadow: none;
-            }
-
-            .carousel-item {
-                height: 250px;
-            }
-
-            .carousel-caption h3 {
-                font-size: 1.2rem;
-            }
-
-            .carousel-caption p {
-                font-size: 0.9rem;
-            }
-
-            .content {
                 margin-left: 0;
                 padding: 10px;
             }
         }
-
-        @media (max-width: 576px) {
-            .carousel-item {
-            height: 400px; 
-            margin-left: 80px;
-
-        }
-
-        .carousel-caption h3 {
-            font-size: 1.2rem;
-            line-height: 1.2;
-        }
-
-        
-        .carousel-caption p {
-            font-size: 0.9rem;
-            line-height: 1.4;
-        }
-    }
     </style>
 </body>
 </html>
